--- a/Hackathon/newsandmedia.html
+++ b/Hackathon/newsandmedia.html
@@ -19,7 +19,7 @@
 <body>
     <div class="navbar fixed-top">
     <div style="width: 100%; background-color: #00325b; color: white;" class="alert text-center">
-            <strong>Talk to Someone now!</strong> Call our Helpline on <a style="color: #29abe2;" href="tel:10920" class="alert-link">Here</a>.You can also <a style="color: #29abe2;" href="chat.html" class="alert-link" target="_blank">Chat online</a>,<a style="color: #29abe2;" href="skype:live:domesticviolence?call" class="alert-link">Videocall</a> or <a style="color: #29abe2;" href="mailto:dvmail123@gmail.com? " class="alert-link">Email</a>
+            <strong>Talk to Someone now!</strong> Call our Helpline <a style="color: #29abe2;" href="tel:181" class="alert-link">Here</a>.You can also <a style="color: #29abe2;" href="http://m.me/domesticviolence" class="alert-link" target="_blank">Chat online</a>,<a style="color: #29abe2;" href="skype:live:domesticviolence?call" class="alert-link">Videocall</a> or <a style="color: #29abe2;" href="mailto:dvmail123@gmail.com? " class="alert-link">Email</a>>
         </div> 
         </div>
     <nav style="margin-top: 90px;" class="navbar navbar-expand-sm">
@@ -46,16 +46,16 @@
             <a href="donate.html" type="button" style="background-color: #33a395; color: white;" class="btn" >DONATE</a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://www.facebook.com/dv/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://www.instagram.com/dv/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://twitter.com/domesticccv"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://www.youtube.com/user/domv"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
             <a href="needhelp.html" style="background-color: #0000b3; color: white;" type="button"  class="btn d-none d-sm-block">Need Help</a>
@@ -186,39 +186,6 @@
           </li>
           <li class="nav-item d-none d-md-block">
             <div class="dropdown">
-            <a style="color: #0000b3; text-align: center;" class="drop nav-link dropdown-toggle" data-toggle="dropdown" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE </a>
-            <div class="collapse" id="whoweareExample">
-              <div class="dropdown-menu">
-                            <div style="text-align: center;">
-                <a href="ourhistory.html" style="color: #0000b3;">Our History</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="strategicplan.html" style="color: #0000b3;">Strategic Plan</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="directors.html" style="color: #0000b3;">Board of Directors</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="advocates.html" style="color: #0000b3;">Our Advocates</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="impactreports.html" style="color: #0000b3;">Impact Reports</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="state&territoryreports.html" style="color: #0000b3;">State&Territory Reports</a>
-                
-              </div>
-            </div>
-            </div>
-                        </div>
-          </li>
-          <li class="nav-item d-none d-md-block">
-            <div class="dropdown">
             <a style="color: #0000b3; text-align: center;" class="drop nav-link dropdown-toggle" data-toggle="dropdown" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED </a>
             <div class="collapse" id="getinvolvedExample">
               <div class="dropdown-menu">
@@ -338,36 +305,6 @@
           </li>
           <li class="nav-item">
             <a style="color: #0000b3; text-align: center;" class="drop nav-link" href="awareness.html" role="button">AWARENESS</a>
-                        <hr>
-          </li>
-          <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
-            <div class="collapse" id="whoweareExample">
-                            <div style="text-align: center;">
-                <a href="ourhistory.html" style="color: #0000b3;">Our History</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="strategicplan.html" style="color: #0000b3;">Strategic Plan</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="directors.html" style="color: #0000b3;">Board of Directors</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="advocates.html" style="color: #0000b3;">Our Advocates</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="impactreports.html" style="color: #0000b3;">Impact Reports</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="state&territoryreports.html" style="color: #0000b3;">State&Territory Reports</a>
-                <hr>
-              </div>
-                        </div>
                         <hr>
           </li>
           <li class="nav-item">
