--- a/Hackathon/blog.html
+++ b/Hackathon/blog.html
@@ -8,13 +8,18 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="styles.css">
 <head>
+  <style>
+    .container {
+      overflow-y: hidden;
+    }
+  </style>
   <title> Domestic Violence </title>
   <link rel = "icon" href = "profile.jpg" type = "image/x-icon">
 </head>
 <body>
     <div class="navbar fixed-top">
     <div style="width: 100%; background-color: #00325b; color: white;" class="alert text-center">
-            <strong>Talk to Someone now!</strong> Call our Helpline on <a style="color: #29abe2;" href="tel:10920" class="alert-link">Here</a>.You can also <a style="color: #29abe2;" href="chat.html" class="alert-link" target="_blank">Chat online</a>,<a style="color: #29abe2;" href="skype:live:domesticviolence?call" class="alert-link">Videocall</a> or <a style="color: #29abe2;" href="mailto:dvmail123@gmail.com? " class="alert-link">Email</a>
+            <strong>Talk to Someone now!</strong> Call our Helpline <a style="color: #29abe2;" href="tel:181" class="alert-link">Here</a>.You can also <a style="color: #29abe2;" href="http://m.me/domesticviolence" class="alert-link" target="_blank">Chat online</a>,<a style="color: #29abe2;" href="skype:live:domesticviolence?call" class="alert-link">Videocall</a> or <a style="color: #29abe2;" href="mailto:dvmail123@gmail.com? " class="alert-link">Email</a>
         </div> 
         </div>
     <nav style="margin-top: 90px;" class="navbar navbar-expand-sm">
@@ -41,16 +46,16 @@
             <a href="donate.html" type="button" style="background-color: #33a395; color: white;" class="btn" >DONATE</a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://www.facebook.com/dv/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://www.instagram.com/dv/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://twitter.com/domesticccv"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="https://www.youtube.com/user/domv"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
             <a href="needhelp.html" style="background-color: #0000b3; color: white;" type="button"  class="btn d-none d-sm-block">Need Help</a>
@@ -181,39 +186,6 @@
           </li>
           <li class="nav-item d-none d-md-block">
             <div class="dropdown">
-            <a style="color: #0000b3; text-align: center;" class="drop nav-link dropdown-toggle" data-toggle="dropdown" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE </a>
-            <div class="collapse" id="whoweareExample">
-              <div class="dropdown-menu">
-                            <div style="text-align: center;">
-                <a href="ourhistory.html" style="color: #0000b3;">Our History</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="strategicplan.html" style="color: #0000b3;">Strategic Plan</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="directors.html" style="color: #0000b3;">Board of Directors</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="advocates.html" style="color: #0000b3;">Our Advocates</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="impactreports.html" style="color: #0000b3;">Impact Reports</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="state&territoryreports.html" style="color: #0000b3;">State&Territory Reports</a>
-                
-              </div>
-            </div>
-            </div>
-                        </div>
-          </li>
-          <li class="nav-item d-none d-md-block">
-            <div class="dropdown">
             <a style="color: #0000b3; text-align: center;" class="drop nav-link dropdown-toggle" data-toggle="dropdown" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED </a>
             <div class="collapse" id="getinvolvedExample">
               <div class="dropdown-menu">
@@ -336,36 +308,6 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
-            <div class="collapse" id="whoweareExample">
-                            <div style="text-align: center;">
-                <a href="ourhistory.html" style="color: #0000b3;">Our History</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="strategicplan.html" style="color: #0000b3;">Strategic Plan</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="directors.html" style="color: #0000b3;">Board of Directors</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="advocates.html" style="color: #0000b3;">Our Advocates</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="impactreports.html" style="color: #0000b3;">Impact Reports</a>
-                <hr>
-              </div>
-              <div style="text-align: center;">
-                <a href="state&territoryreports.html" style="color: #0000b3;">State&Territory Reports</a>
-                <hr>
-              </div>
-                        </div>
-                        <hr>
-          </li>
-          <li class="nav-item">
             <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED</a>
             <div class="collapse" id="getinvolvedExample">
               <div style="text-align: center;">
@@ -393,7 +335,57 @@
       <h2>BLOG</h2>
     </div>
     <div class="container">
-      
+      <a href="https://www.breakthecycle.org/blog/i-dont-have-your-number-anymore-id-still-know-its-you"><h4>I Don't Have Your Number,But I Know It's You</h4>Written By : Tatsumi Romano</a>
+      <p>I Don't Have Your Number Anymore, But I'd Always Know It's You Written by: Tatsumi Romano Advocate / Survivor * This article was originally posted on Medium on April 14, 2020 ....... Before :  "Hang on, my mom's calling me."......</p>
+      <a href="https://www.breakthecycle.org/blog/i-dont-have-your-number-anymore-id-still-know-its-you">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/navigating-virtual-realities-how-break-cycle-has-achieved-its-mission-remote-workforce"><h4>Navigating Virtual Realities</h4>Written By : Amy Sanchez</a>
+      <p>Five years ago, Break the Cycle developed into a virtual, non-profit focused on our goal to end youth abuse in relationships. Supported by a talented and diverse team of lawyers, educators and technical experts, our mission has been "operationalized" into everything we do.....</p>
+      <a href="https://www.breakthecycle.org/blog/navigating-virtual-realities-how-break-cycle-has-achieved-its-mission-remote-workforce">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/2019-teen-dating-violence-awareness-month-theme-here"><h4>Teen Dating Violence</h4>Written By : LBR members</a>
+      <p>Well..earlier this year, a young person named Zachary Mallory from Kansas City, MO submitted an idea to Break the Cycle’s 2019 Teen Dating Violence Awareness month theme competition.Zachary’s original entry stated, “Love is an open door …with consent.” Zach explained, “I came up with this idea because in relationships there still .....</p>
+      <a href="https://www.breakthecycle.org/blog/2019-teen-dating-violence-awareness-month-theme-here">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/being-possessive-sign-love"><h4>Is Being Possessive Sign Of Love ?</h4>Written By : Daniela & Mariana</a>
+      <p>Dating violence begins much earlier than you thought and it can be a common occurrence in adolescent relationships. Many youth view the controlling actions of a spouse as love or affection, when it is actually the first indication of an abusive relation. My story began when I met Jared * in the seventh grade and this is how I found the answer to the question....</p>
+      <a href="https://www.breakthecycle.org/blog/being-possessive-sign-love">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/back-2-school-healthy-long-distance-relationships-college"><h4>Long Distance Relationships In College</h4>Written By : Mati</a>
+      <p>With September in full swing, it's time to swap our beach reads for textbooks, pack our bags and get ready to launch a new college semester. For some of you, the end of summer doesn't just mean giving your pet a dramatic goodbyes or bracing yourself....</p>
+      <a href="https://www.breakthecycle.org/blog/back-2-school-healthy-long-distance-relationships-college">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/lets-be-real-social-media-social-change"><h4>Social Media For Social Change</h4>Written By : Lauren,Rodrigo.Elizabeth</a>
+      <p>July 2017 marked the one year anniversary of Let's Be Real, a social movement around relationships for young people. To share our lessons from a year of movement and celebrate the success of the young people who push it, staff members of Break the Cycle are reflecting on their experiences ...</p>
+      <a href="https://www.breakthecycle.org/blog/lets-be-real-social-media-social-change">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/real-stories-having-healthy-hookup"><h4>Having Healthy Hookup</h4>Written By : LET"S BE REAL Members</a>
+      <p>It's Real Week for Teen Dating Abuse Awareness Month and the theme today is "Freaky Friday." Okay! We 're here today to get serious about sex, consent, expectations and all the awkwardness that occurs while you're dating ... but maybe not always. Today I would like to speak about hookups:</p>
+      <a href="https://www.breakthecycle.org/blog/real-stories-having-healthy-hookup">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/celebrating-womens-history-month"><h4>Celebrating Women's History Month</h4>Written By : Brigid Burke</a>
+      <p>March is Women's History Month, and for many reasons, it's crucial for Break the Cycle and you. The Women's History Month started in 1978, as a week-long celebration of women and their contributions to culture and society in Sonoma, California. This idea caught on in the following years, and spread around the nation to other cultures........</p>
+      <a href="https://www.breakthecycle.org/blog/celebrating-womens-history-month">Readmore...</a>
+    </div>
+    <hr>
+    <div class="container">
+      <a href="https://www.breakthecycle.org/blog/dear-friend-what-your-support-during-abusive-relationship-really-meant"><h4>Friends Support During Abusive Relationship</h4>Written By : Jessica Quiroli</a>
+      <p>It's been a long time and still, recently, I learned something. I never really wished to thank you. We always thanked each other for their little items, birthdays and Christmases. We had quite a lot of fun. We wrestled a lot. We've done our best to figure out what direction to take and, I 'm sure, none of us could have foreseen where we'd wind up....</p>
+      <a href="https://www.breakthecycle.org/blog/dear-friend-what-your-support-during-abusive-relationship-really-meant">Readmore...</a>
     </div>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
