--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -32,9 +32,6 @@
 						<a class="drop nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a class="drop nav-link" href="resources.html">RESOURCES</a>
-					</li>
-					<li class="nav-item d-none d-lg-block">
 						<a class="drop nav-link" href="yourstories.html">YOUR STORIES</a>
 					</li>
 					<li class="nav-item">
@@ -373,7 +370,7 @@
 	</div>
     </div>
 	<div class="container text-center">
-		<h2 style="font-family: 'Hind Siliguri', sans-serif; color: #0000b3;"><p style="color: #33a395;">The more that we choose not to talk about domestic violence, the more we shy away from the issue, the more we lose.</p>Nobody believes that domestic violence kills and nobody believes it is detrimental to children. This world has got to wake up. To me, if there is domestic violence, if the children see it or hear it, that to me is detrimental. Batterers should not have rights to children.</h2>
+		<h4 style="font-family: 'Hind Siliguri', sans-serif;color: #0000b3;padding-top: 2rem;"><p style="color: #33a395; padding-bottom: 2rem;">The more that we choose not to talk about domestic violence, the more we shy away from the issue, the more we lose.</p>Nobody believes that domestic violence kills and nobody believes it is detrimental to children. This world has got to wake up. To me, if there is domestic violence, if the children see it or hear it, that to me is detrimental. Batterers should not have rights to children.</h4>
     </div>
     <div style="border: 10px;" class="container">
     	<div class="row">
