--- a/Hackathon/sponsers&partners.html
+++ b/Hackathon/sponsers&partners.html
@@ -32,9 +32,6 @@
 						<a class="drop nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a class="drop nav-link" href="resources.html">RESOURCES</a>
-					</li>
-					<li class="nav-item d-none d-lg-block">
 						<a class="drop nav-link" href="yourstories.html">YOUR STORIES</a>
 					</li>
 					<li class="nav-item">
@@ -326,6 +323,13 @@
 			
 			</div>
 		</nav>
+		<div class="container text-center">
+			<h5 style="font-family: 'Hind Siliguri', sans-serif;color: #124096; text-align:center">Collaborate with Us as Sponsors and partners. </h5>
+		<h5 style="font-family: 'Hind Siliguri', sans-serif;color: #33a395; text-align: left;">There are many desirable benefits of collaboration... Projects and dreams get launched faster when people come together with common goals, risk is reduced when responsibility is shared, and there are more ways to engage and recognize sponsors. Overall, the end result of any dream raised through collaboration and partnership can be much bigger and better than you may have achieved on your own.<br>
+
+			Commonly, collaborative projects are often referred to as alliances, coalitions, partnerships, and networks. Working as teams or units provides the potential or ability to tackle and address challenging problems with innovative solutions.<br>
+			
+			Sponsors (and funding organizations) are more often encouraging (and in some cases requiring) collaboration as a way of reducing duplication of services, reducing risk, increasing results, and improving sustainability <br> <button type="button" class="btn btn-primary btn-lg"">Apply</button></h5>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
